# DiffMethylTools

./: .gitignore  DiffMethTools.py  DiffMethylTools.py  README.md  environment.yml  generate_docs.py  get_files.sh  hg38_min.yml  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
DiffMethylTools/: DiffMethylTools.py  __main__.py
DiffMethylTools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
DiffMethylTools/modules/: analysis_funcs.py  annotation_funcs.py  cpg_annotation.py  main_funcs.py  plot_funcs.py
Reproducibility/: readme.md
Reproducibility/DSS/: bed2dss.py  new_destrand_bed.py  readme.txt  run_dss.r
Reproducibility/MethylKit/: readme.txt  run_methylkit.r
Reproducibility/MethylSig/: readme.txt  run_methylSig.r
Reproducibility/Test DMR/: CpG_intersect.sh  README.md  generate_true_3_res.sh  rename_files_3_res.sh  run_all.sh  test_3_res.sh  test_results_3_res.sh  test_results_CpG.sh
annotation/: index.html
docs/: DiffMethylTools.html  analysis.md  annotation.md  index.md  installation.md  modules.html  plotting.md  quickstart.md  search.html  searchindex.js
docs_old/: DiffMethylTools.html  genindex.html  index.html  objects.inv
html/: DiffMethTools.html  TEST_DiffMethTools.html  genindex.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js
installation/: index.html
lib/: __init__.py  analysis.py  gene_analysis.py  input_processor.py  plots.py  position_p_vals.py
plotting/: index.html
quickstart/: index.html
search/: search_index.json
site/: 404.html  index.html
(+24 files in other folders)
