[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DiffMethylTools"
version = "1.1.3"
description = "A pipeline for detecting, visualizing and annotating Differentially Methylated Loci and Regions"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Qian Liu", email = "qian.liu@unlv.edu"}
]

dependencies = [
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",
    "polars>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "rpy2==3.5.11",
    "pyarrow>=11.0.0",
    "pyyaml",
    "tqdm",
    "joblib"
]

[project.urls]
"Homepage" = "https://github.com/qgenlab/DiffMethylTools"
"Documentation" = "https://github.com/qgenlab/DiffMethylTools/blob/main/README.md"
"Bug Tracker" = "https://github.com/qgenlab/DiffMethylTools/issues"


[tool.setuptools.packages.find]
where = ["."]
include = ["DiffMethylTools*"]

[tool.setuptools.package-data]
"DiffMethylTools" = ["bin/*.sh"]

[project.scripts]
DiffMethylTools = "DiffMethylTools.DiffMethylTools:main"
